@@ -41,7 +41,7 @@
 .SH NAME
 benchmark \- runs the BRL-CAD benchmark
 .SH SYNOPSIS
-.B [OPTION=value] benchmark [command]
+.B [OPTION=value] benchmark [command] [OPTION=value] [RT_OPTIONS]
 .SH DESCRIPTION
 .PP
 The benchmark suite will test the performance of a given system by
@@ -53,7 +53,6 @@ number is a simplified metric from which one may qualitatively compare
 cpu and cache performance, versions of BRL-CAD, and different compiler
 characteristics.
 .PP
-
 Run without any arguments or variables set, the benchmark suite will
 run a series of tests where it renders several image frames.  By
 default, the benchmark suite will attempt to calibrate the intensity
@@ -126,9 +125,9 @@ additional rays are hypersampled but without any jitter, so it is
 effectively performing a multiplier amount of work over the initial
 frame.
 .PP
-There are two \fBcommand\fRs that may be give to the BRL-CAD benchmark
-that cause it to peform cleanup actions instead of invoking the
-computation tests:
+There are various \fBcommand\fRs that may be give to the BRL-CAD
+benchmark that cause it to peform various actions such as invoking the
+computation tests or filesystem clean-up:
 .PP
 \&
 .B clean
@@ -137,6 +136,30 @@ computation tests:
 \&
 .B clobber
 \- same as clean, also benchmark.log files and user is prompted
+.br
+\&
+.B help
+\- displays a brief usage statement
+.br
+\&
+.B instructions
+\- displays more detailed usage instructions
+.br
+\&
+.B quiet
+\- quell printing output (still logs)
+.br
+\&
+.B verbose
+\- remove the test-specific pix and log files
+.br
+\&
+.B clean
+\- remove the test-specific pix and log files
+.br
+\&
+.B run
+\- initiate the benchmark analysis
 .br
 .PP
 When the benchmark completes, output should be saved to several log
@@ -151,7 +174,7 @@ The \fIclean\fR command removes the test pix and log files.  The
 *benchmark.log files encountered, and prompting the user beforehand.
 The generated tabular \fIsummary\fR file will not be removed
 automatically regardless of invocation command.  The \fIsummary\fR
-file must be manually deleted.
+file must always be manually deleted.
 .SH "REPORTING RESULTS"
 .PP
 Plese send your BRL-CAD Benchmark results to the developers along with
@@ -165,19 +188,23 @@ detailed system information to <devs@brlcad.org>.  Include at least:
    4) Anything else you think might be relevant to performance
 .SH EXAMPLES
 .PP
-.B benchmark
+.B benchmark run
 .br
    default run of the suite, taking approximately 10 minutes
 .PP
-.B TIMEFRAME=1 benchmark
+.B benchmark run TIMEFRAME=1
 .br
    quick test run for testing functionality and performance ballpark
 .PP
-.B DEVIATION=1 TIMEFRAME=60 MAXTIME=600 benchmark
+.B benchmark run DEVIATION=1 TIMEFRAME=60 MAXTIME=600
 .br
    excessive analysis, attempt to stabilize within 1 percent deviation
 with each frame taking at least 60 seconds but no more than 10 minutes
 per test (the entire analysis will probably take 30 to 60 minutes)
+.B benchmark run QUIET=1 -P1
+.br
+   perform a benchmark analysis only using one CPU and only logging
+results to a file
 .PP
 .B benchmark clean
 .br
